add the bootstrap template

--- a/blog/templates/blog/pagination.html
+++ b/blog/templates/blog/pagination.html
@@ -1,13 +1,16 @@
-<div class="pagination">
-  <span class="step-links">
+<hr>
+<ul class="pager">
     {% if page.has_previous %}
-      <a href="?page={{ page.previous_page_number }}">Previous</a>
+      <li class="previous">
+          <a href="?page={{ page.previous_page_number }}">Previous &rarr;</a>
+      </li>
     {% endif %}
-    <span class="current">
-      Page {{ page.number }} of {{ page.paginator.num_pages }}.
-    </span>
+      <li class="current">
+        Page {{ page.number }} of {{ page.paginator.num_pages }}.
+      </li>
     {% if page.has_next %}
-      <a href="?page={{ page.next_page_number }}">Next</a>
+      <li class="next">
+        <a href="?page={{ page.next_page_number }}">Next</a>
+      </li>
     {% endif %}
-  </span>
-</div>
+</ul>
