--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -1,9 +1,13 @@
 {% extends "blog/base.html" %}
 {% block title %}{{ post.title }}{% endblock %}
+{% block header %}
+  <div class="post-heading">
+      <h1>{{post.title}}</h1>
+      <!--<h2 class="subheading">Problems look mighty small from 150 miles up</h2>-->
+      <span class="meta">Posted by <a href="#">{{ post.author }}</a> on {{ post.publish }}</span>
+  </div>
+{% endblock %}
+
 {% block content %}
-  <h1>{{ post.title }}</h1>
-  <p class="date">
-    Published {{ post.publish }} by {{ post.author }}
-  </p>
   {{ post.body|linebreaks }}
 {% endblock %}
