--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,17 +1,28 @@
 {% extends "blog/base.html" %}
-{% block title %}My Blog{% endblock %}
+{% block title %}Villadevs{% endblock %}
+{% block header%}
+  <div class="site-heading">
+      <h1>Clean Blog</h1>
+      <hr class="small">
+      <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+  </div>
+{% endblock %}
 {% block content %}
-  <h1>My Blog</h1>
-  {% for post in posts %}
-  <h2>
-  <a href="{{ post.get_absolute_url }}">
-    {{ post.title }}
-  </a>
-  </h2>
-    <p class="date">
-      Published {{ post.publish }} by {{ post.author }}
-    </p>
-    {{ post.body|truncatewords:30|linebreaks }}
-  {% endfor %}
-    {% include "blog/pagination.html" with page=page_obj %}
+
+      {% for post in posts %}
+      <div class="post-preview">
+        <a href="{{ post.get_absolute_url }}">
+            <h2 class="post-title">
+                {{ post.title }}
+            </h2>
+            <h3 class="post-subtitle">
+                {{ post.body|truncatewords:30|linebreaks }}
+            </h3>
+        </a>
+        <p class="post-meta">
+          Posted by <a href="#">{{ post.author }}</a> on {{ post.publish }}
+        </p>
+      </div>
+      {% endfor %}
+{% include "blog/pagination.html" with page=page_obj %}
 {% endblock %}
