--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -10,4 +10,10 @@
 
 {% block content %}
   {{ post.body|linebreaks }}
+
+  <p>
+    <a href="{% url "blog:post_share" post.id %}">
+      Share this post
+    </a>
+  </p>
 {% endblock %}
