--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -22,7 +22,19 @@
         <p class="post-meta">
           Posted by <a href="#">{{ post.author }}</a> on {{ post.publish }}
         </p>
+        <p class="tags">
+          Tags:
+          {% for tag in post.tags.all %}
+            <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+              {{ tag.name }}
+            </a>
+            {% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
       </div>
       {% endfor %}
-{% include "blog/pagination.html" with page=page_obj %}
+      {% if tag %}
+        <h2>Posts tagged with "{{ tag.name }}"</h2>
+      {% endif %}
+{% include "blog/pagination.html" with page=posts %}
 {% endblock %}
