--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,10 +1,11 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 {% block title %}Villadevs{% endblock %}
 {% block header%}
   <div class="site-heading">
-      <h1>Clean Blog</h1>
+      <h1>Villadevs</h1>
       <hr class="small">
-      <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+      <span class="subheading">La comunidad de desarrollo de software para la media Colombia</span>
   </div>
 {% endblock %}
 {% block content %}
@@ -16,7 +17,7 @@
                 {{ post.title }}
             </h2>
             <h3 class="post-subtitle">
-                {{ post.body|truncatewords:30|linebreaks }}
+                {{ post.body|markdown|truncatewords_html:30 }}
             </h3>
         </a>
         <p class="post-meta">
